fixed style errors on mobile devices for results pages

--- a/webapp/components/generation/generation/Generation.module.css
+++ b/webapp/components/generation/generation/Generation.module.css
@@ -66,7 +66,7 @@
     display: flex;
     justify-content: center;
     width: 100%;
-    gap: 1rem;
+    gap: 0.5rem;
     background: var(--primary);
     padding: 1rem;
     border-radius: 16px;
@@ -80,7 +80,6 @@
 }
 
 .asset_image img {
-    border-radius: 3px;
     object-fit: cover;
 }
 
@@ -171,5 +170,9 @@
 
     .lrp_header {
         flex-direction: column;
+    }
+
+    .display_container {
+        padding: 0.5rem;
     }
 }
